# ev-text-editor

./: .ev.cfg  .gitignore  CMakeLists.txt  Foundation.cpp  Foundation.hpp  Foundation.test.cpp  README.md  application.cpp  application.h  build_mingw.cmd  colors  console.cpp  console.h  depends.mk  editor.c  editor.cpp  editor.h  editor.rc  editor.res  ev.cfg  eve.c  eve.cpp  eve.h  eve.sln  example.cpp  file.cpp  file.h  foundation.cpp  foundation.h  gmake.mk  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  makefile  nmake.mk  readme.txt  renderer.cpp  renderer.h  (+7 more)
docs/: CNAME  ev-aix.tar.bz2  ev-linux.tar.bz2  ev-mac.tar.bz2  ev-solaris.tar.bz2  eve-aix.tar.bz2  eve-linux.tar.bz2  eve-mac.tar.bz2  eve-solaris.tar.bz2  example.cpp  index.html  test.html
eve/: console.cpp  console.h  dictionary.cpp  dictionary.h  dictionary.txt  eve.cpp  eve.h  eve.vcxproj  eve.vcxproj.filters  file.cpp  file.h  foundation.cpp  foundation.h  keycode  makefile  test.cpp  test.h  test.txt  test2.txt  todo.txt
eve.xcodeproj/: project.pbxproj
eve.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
linux_graphics/: .bashrc  .gitconfig  .vimrc  .xinitrc
linux_graphics/cairo/: makefile  test.cpp
linux_graphics/cairo_xcb/: makefile  test.cpp
linux_graphics/gtkmm/: gtkmm  gtkmm.cpp  makefile
linux_graphics/opengles/: makefile  test  test.cpp
linux_graphics/xcb/: makefile  test  test.cpp
linux_graphics/xlib/: makefile  test.cpp
web/: ev-aix.tar.bz2  ev-linux.tar.bz2  ev-mac.tar.bz2  ev-solaris.tar.bz2  index.html
(+3 files in other folders)
